// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getField for Form 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Color-field-name-"
    style={Object {}}
  >
     
  </label>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#123456",
            "border": "1px solid black",
            "height": 20,
            "width": 20,
          }
        }
      />
    </span>
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-Color-field-name-"
      maxLength="7"
      onChange={[Function]}
      type="text"
      value="#123456"
    />
  </div>
</div>
`;

exports[`getField for Form for github 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Color-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#123456",
            "border": "1px solid black",
            "height": 20,
            "width": 20,
          }
        }
      />
    </span>
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-Color-field-name-"
      maxLength="7"
      onChange={[Function]}
      type="text"
      value="#123456"
    />
  </div>
</div>
`;

exports[`getField for Form readonly 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Color-field-name-"
    style={Object {}}
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#123456",
            "border": "1px solid black",
            "height": 20,
            "width": 20,
          }
        }
      />
    </span>
    <input
      className="form-control"
      disabled={true}
      id="view-type-Form-field_type-Color-field-name-"
      maxLength="7"
      onChange={[Function]}
      type="text"
      value="#123456"
    />
  </div>
</div>
`;

exports[`getField for Form required 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Color-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "#123456",
            "border": "1px solid black",
            "height": 20,
            "width": 20,
          }
        }
      />
    </span>
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-Color-field-name-"
      maxLength="7"
      onChange={[Function]}
      type="text"
      value="#123456"
    />
  </div>
</div>
`;

exports[`getField for Form required with empty value 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Form-field_type-Color-field-name-"
    style={
      Object {
        "color": "#3f51b5",
      }
    }
  >
    Test
  </label>
  <div
    className="input-group"
  >
    <span
      className="input-group-addon"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "backgroundColor": "white",
            "border": "1px solid black",
            "height": 20,
            "width": 20,
          }
        }
      />
    </span>
    <input
      className="form-control"
      disabled={undefined}
      id="view-type-Form-field_type-Color-field-name-"
      maxLength="7"
      onChange={[Function]}
      type="text"
      value=""
    />
  </div>
  <div>
    <span
      style={
        Object {
          "color": "#f44336",
        }
      }
    >
      This field is required
    </span>
  </div>
</div>
`;

exports[`getField for List 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#123456",
          "border": "1px solid black",
          "display": "inline-block",
          "height": 20,
          "marginRight": 10,
          "width": 20,
        }
      }
    />
    <span>
      #123456
    </span>
  </div>
</div>
`;

exports[`getField for Thumbnail 1`] = `
<div
  className="form-group"
>
  <label
    htmlFor="view-type-Thumbnail-field_type-Color-field-name-"
  >
     
  </label>
  <div>
    <div
      style={
        Object {
          "backgroundColor": "#123456",
          "border": "1px solid black",
          "display": "inline-block",
          "height": 20,
          "marginRight": 10,
          "width": 20,
        }
      }
    />
    <div
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div>
        <span>
          #123456
        </span>
      </div>
    </div>
  </div>
</div>
`;
